Beginning to have a BeerXML generator

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 			<ul>
 				<li><a href="namespace-BeerXML.html">BeerXML<span></span></a>
 						<ul>
+				<li><a href="namespace-BeerXML.Generator.html">Generator</a>
+						</li>
 				<li><a href="namespace-BeerXML.Parser.html">Parser</a>
 						</li>
 				<li><a href="namespace-BeerXML.Record.html">Record</a>
@@ -39,6 +41,8 @@
 			<h3>Classes</h3>
 			<ul>
 				<li><a href="class-BeerXML.Generator.html">BeerXML\Generator</a></li>
+				<li><a href="class-BeerXML.Generator.Recipe.html">BeerXML\Generator\Recipe</a></li>
+				<li><a href="class-BeerXML.Generator.Record.html">BeerXML\Generator\Record</a></li>
 				<li><a href="class-BeerXML.Parser.html">BeerXML\Parser</a></li>
 				<li><a href="class-BeerXML.Parser.Equipment.html">BeerXML\Parser\Equipment</a></li>
 				<li><a href="class-BeerXML.Parser.Fermentable.html">BeerXML\Parser\Fermentable</a></li>
@@ -62,6 +66,7 @@
 				<li><a href="class-BeerXML.Record.Water.html">BeerXML\Record\Water</a></li>
 				<li><a href="class-BeerXML.Record.Yeast.html">BeerXML\Record\Yeast</a></li>
 				<li><a href="class-XMLReader.html">XMLReader</a></li>
+				<li><a href="class-XMLWriter.html">XMLWriter</a></li>
 			</ul>
 
 			<h3>Interfaces</h3>
@@ -117,6 +122,9 @@
 	<caption>Namespaces summary</caption>
 	<tr>
 		<td class="name"><a href="namespace-BeerXML.html">BeerXML</a></td>
+	</tr>
+	<tr>
+		<td class="name"><a href="namespace-BeerXML.Generator.html">BeerXML\Generator</a></td>
 	</tr>
 	<tr>
 		<td class="name"><a href="namespace-BeerXML.Parser.html">BeerXML\Parser</a></td>
