--- a/tree.html
+++ b/tree.html
@@ -7,7 +7,7 @@
 	<title>Tree | php-beerxml</title>
 
 	<script type="text/javascript" src="resources/combined.js?3715972085"></script>
-	<script type="text/javascript" src="elementlist.js?330001122"></script>
+	<script type="text/javascript" src="elementlist.js?1782243200"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="resources/style.css?3505392360" />
 
 </head>
@@ -23,6 +23,8 @@
 			<ul>
 				<li><a href="namespace-BeerXML.html">BeerXML<span></span></a>
 						<ul>
+				<li><a href="namespace-BeerXML.Generator.html">Generator</a>
+						</li>
 				<li><a href="namespace-BeerXML.Parser.html">Parser</a>
 						</li>
 				<li><a href="namespace-BeerXML.Record.html">Record</a>
@@ -40,6 +42,8 @@
 			<h3>Classes</h3>
 			<ul>
 				<li><a href="class-BeerXML.Generator.html">BeerXML\Generator</a></li>
+				<li><a href="class-BeerXML.Generator.Recipe.html">BeerXML\Generator\Recipe</a></li>
+				<li><a href="class-BeerXML.Generator.Record.html">BeerXML\Generator\Record</a></li>
 				<li><a href="class-BeerXML.Parser.html">BeerXML\Parser</a></li>
 				<li><a href="class-BeerXML.Parser.Equipment.html">BeerXML\Parser\Equipment</a></li>
 				<li><a href="class-BeerXML.Parser.Fermentable.html">BeerXML\Parser\Fermentable</a></li>
@@ -63,6 +67,7 @@
 				<li><a href="class-BeerXML.Record.Water.html">BeerXML\Record\Water</a></li>
 				<li><a href="class-BeerXML.Record.Yeast.html">BeerXML\Record\Yeast</a></li>
 				<li><a href="class-XMLReader.html">XMLReader</a></li>
+				<li><a href="class-XMLWriter.html">XMLWriter</a></li>
 			</ul>
 
 			<h3>Interfaces</h3>
@@ -123,6 +128,20 @@
 			</div>
 
 				</li>
+
+			<li><div class="notlast"><a href="class-BeerXML.Generator.Record.html"><span>BeerXML\Generator\Record</span></a>
+			
+			
+			</div>
+
+				<ul>
+
+			<li class="last"><div class="last"><a href="class-BeerXML.Generator.Recipe.html"><span>BeerXML\Generator\Recipe</span></a>
+			
+			
+			</div>
+
+				</ul></li>
 
 			<li><div class="notlast"><a href="class-BeerXML.Parser.html"><span>BeerXML\Parser</span></a>
 			
@@ -278,7 +297,14 @@
 
 				</li>
 
-			<li class="last"><div class="last"><a href="class-XMLReader.html"><span>XMLReader</span></a>
+			<li><div class="notlast"><a href="class-XMLReader.html"><span>XMLReader</span></a>
+			
+			
+			</div>
+
+				</li>
+
+			<li class="last"><div class="last"><a href="class-XMLWriter.html"><span>XMLWriter</span></a>
 			
 			
 			</div>
