--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 	<title>Page not found | php-beerxml</title>
 
 	<script type="text/javascript" src="resources/combined.js?3715972085"></script>
-	<script type="text/javascript" src="elementlist.js?330001122"></script>
+	<script type="text/javascript" src="elementlist.js?1782243200"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="resources/style.css?3505392360" />
 
 </head>
@@ -24,6 +24,8 @@
 			<ul>
 				<li><a href="namespace-BeerXML.html">BeerXML<span></span></a>
 						<ul>
+				<li><a href="namespace-BeerXML.Generator.html">Generator</a>
+						</li>
 				<li><a href="namespace-BeerXML.Parser.html">Parser</a>
 						</li>
 				<li><a href="namespace-BeerXML.Record.html">Record</a>
@@ -41,6 +43,8 @@
 			<h3>Classes</h3>
 			<ul>
 				<li><a href="class-BeerXML.Generator.html">BeerXML\Generator</a></li>
+				<li><a href="class-BeerXML.Generator.Recipe.html">BeerXML\Generator\Recipe</a></li>
+				<li><a href="class-BeerXML.Generator.Record.html">BeerXML\Generator\Record</a></li>
 				<li><a href="class-BeerXML.Parser.html">BeerXML\Parser</a></li>
 				<li><a href="class-BeerXML.Parser.Equipment.html">BeerXML\Parser\Equipment</a></li>
 				<li><a href="class-BeerXML.Parser.Fermentable.html">BeerXML\Parser\Fermentable</a></li>
@@ -64,6 +68,7 @@
 				<li><a href="class-BeerXML.Record.Water.html">BeerXML\Record\Water</a></li>
 				<li><a href="class-BeerXML.Record.Yeast.html">BeerXML\Record\Yeast</a></li>
 				<li><a href="class-XMLReader.html">XMLReader</a></li>
+				<li><a href="class-XMLWriter.html">XMLWriter</a></li>
 			</ul>
 
 			<h3>Interfaces</h3>
