--- a/namespace-PHP.html
+++ b/namespace-PHP.html
@@ -7,7 +7,7 @@
 	<title>Namespace PHP | php-beerxml</title>
 
 	<script type="text/javascript" src="resources/combined.js?3715972085"></script>
-	<script type="text/javascript" src="elementlist.js?330001122"></script>
+	<script type="text/javascript" src="elementlist.js?1782243200"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="resources/style.css?3505392360" />
 
 </head>
@@ -23,6 +23,8 @@
 			<ul>
 				<li><a href="namespace-BeerXML.html">BeerXML<span></span></a>
 						<ul>
+				<li><a href="namespace-BeerXML.Generator.html">Generator</a>
+						</li>
 				<li><a href="namespace-BeerXML.Parser.html">Parser</a>
 						</li>
 				<li><a href="namespace-BeerXML.Record.html">Record</a>
@@ -40,6 +42,7 @@
 			<h3>Classes</h3>
 			<ul>
 				<li><a href="class-XMLReader.html">XMLReader</a></li>
+				<li><a href="class-XMLWriter.html">XMLWriter</a></li>
 			</ul>
 
 
@@ -93,6 +96,10 @@
 <caption>Classes summary</caption>
 <tr>
 	<td class="name"><a href="class-XMLReader.html">XMLReader</a></td>
+	<td></td>
+</tr>
+<tr>
+	<td class="name"><a href="class-XMLWriter.html">XMLWriter</a></td>
 	<td></td>
 </tr>
 </table>
