--- a/source-class-BeerXML.Record.Misc.html
+++ b/source-class-BeerXML.Record.Misc.html
@@ -8,7 +8,7 @@
 	<title>File BeerXML/Record/Misc.php | php-beerxml</title>
 
 	<script type="text/javascript" src="resources/combined.js?3715972085"></script>
-	<script type="text/javascript" src="elementlist.js?330001122"></script>
+	<script type="text/javascript" src="elementlist.js?1782243200"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="resources/style.css?3505392360" />
 
 </head>
@@ -24,6 +24,8 @@
 			<ul>
 				<li class="active"><a href="namespace-BeerXML.html">BeerXML<span></span></a>
 						<ul>
+				<li><a href="namespace-BeerXML.Generator.html">Generator</a>
+						</li>
 				<li><a href="namespace-BeerXML.Parser.html">Parser</a>
 						</li>
 				<li class="active"><a href="namespace-BeerXML.Record.html">Record</a>
