Generator now working

--- a/class-BeerXML.Generator.Yeast.html
+++ b/class-BeerXML.Generator.Yeast.html
@@ -249,11 +249,11 @@
 				<a href="source-class-BeerXML.Generator.Yeast.html#16-26" title="Go to source code"><var>$simpleValues</var></a>
 		</td>
 		<td class="value"><code><span class="php-keyword1">array</span>(
-    <span class="php-quote">'NAME'</span>    =&gt; <span class="php-quote">'setName'</span>,
-    <span class="php-quote">'VERSION'</span> =&gt; <span class="php-quote">'setVersion'</span>,
-    <span class="php-quote">'TYPE'</span>    =&gt; <span class="php-quote">'setType'</span>,
-    <span class="php-quote">'FORM'</span>    =&gt; <span class="php-quote">'setForm'</span>,
-    <span class="php-quote">'AMOUNT'</span>  =&gt; <span class="php-quote">'setAmount'</span>,
+    <span class="php-quote">'NAME'</span>    =&gt; <span class="php-quote">'getName'</span>,
+    <span class="php-quote">'VERSION'</span> =&gt; <span class="php-quote">'getVersion'</span>,
+    <span class="php-quote">'TYPE'</span>    =&gt; <span class="php-quote">'getType'</span>,
+    <span class="php-quote">'FORM'</span>    =&gt; <span class="php-quote">'getForm'</span>,
+    <span class="php-quote">'AMOUNT'</span>  =&gt; <span class="php-quote">'getAmount'</span>,
 )</code></td>
 		<td class="description"><div>
 			<a href="#$simpleValues" class="anchor">#</a>
@@ -282,18 +282,18 @@
 				<a href="source-class-BeerXML.Generator.Yeast.html#28-45" title="Go to source code"><var>$optionalSimpleValues</var></a>
 		</td>
 		<td class="value"><code><span class="php-keyword1">array</span>(
-    <span class="php-quote">'AMOUNT_IS_WEIGHT'</span> =&gt; <span class="php-quote">'setAmountIsWeight'</span>,
-    <span class="php-quote">'LABORATORY'</span>       =&gt; <span class="php-quote">'setLaboratory'</span>,
-    <span class="php-quote">'PRODUCT_ID'</span>       =&gt; <span class="php-quote">'setProductId'</span>,
-    <span class="php-quote">'MIN_TEMPERATURE'</span>  =&gt; <span class="php-quote">'setMinTemperature'</span>,
-    <span class="php-quote">'FLOCCULATION'</span>     =&gt; <span class="php-quote">'setFlocculation'</span>,
-    <span class="php-quote">'ATTENUATION'</span>      =&gt; <span class="php-quote">'setAttenuation'</span>,
-    <span class="php-quote">'NOTES'</span>            =&gt; <span class="php-quote">'setNotes'</span>,
-    <span class="php-quote">'BEST_FOR'</span>         =&gt; <span class="php-quote">'setBestFor'</span>,
-    <span class="php-quote">'TIMES_CULTURED'</span>   =&gt; <span class="php-quote">'setTimesCultured'</span>,
-    <span class="php-quote">'MAX_REUSE'</span>        =&gt; <span class="php-quote">'setMaxReuse'</span>,
-    <span class="php-quote">'MAX_TEMPERATURE'</span>  =&gt; <span class="php-quote">'setMaxTemperature'</span>,
-    <span class="php-quote">'ADD_TO_SECONDARY'</span> =&gt; <span class="php-quote">'setAddToSecondary'</span>,
+    <span class="php-quote">'AMOUNT_IS_WEIGHT'</span> =&gt; <span class="php-quote">'getAmountIsWeight'</span>,
+    <span class="php-quote">'LABORATORY'</span>       =&gt; <span class="php-quote">'getLaboratory'</span>,
+    <span class="php-quote">'PRODUCT_ID'</span>       =&gt; <span class="php-quote">'getProductId'</span>,
+    <span class="php-quote">'MIN_TEMPERATURE'</span>  =&gt; <span class="php-quote">'getMinTemperature'</span>,
+    <span class="php-quote">'FLOCCULATION'</span>     =&gt; <span class="php-quote">'getFlocculation'</span>,
+    <span class="php-quote">'ATTENUATION'</span>      =&gt; <span class="php-quote">'getAttenuation'</span>,
+    <span class="php-quote">'NOTES'</span>            =&gt; <span class="php-quote">'getNotes'</span>,
+    <span class="php-quote">'BEST_FOR'</span>         =&gt; <span class="php-quote">'getBestFor'</span>,
+    <span class="php-quote">'TIMES_CULTURED'</span>   =&gt; <span class="php-quote">'getTimesCultured'</span>,
+    <span class="php-quote">'MAX_REUSE'</span>        =&gt; <span class="php-quote">'getMaxReuse'</span>,
+    <span class="php-quote">'MAX_TEMPERATURE'</span>  =&gt; <span class="php-quote">'getMaxTemperature'</span>,
+    <span class="php-quote">'ADD_TO_SECONDARY'</span> =&gt; <span class="php-quote">'getAddToSecondary'</span>,
 )</code></td>
 		<td class="description"><div>
 			<a href="#$optionalSimpleValues" class="anchor">#</a>
