--- a/class-BeerXML.Generator.html
+++ b/class-BeerXML.Generator.html
@@ -88,6 +88,11 @@
 	<h1>Class Generator</h1>
 
 
+	<div class="description">
+	
+<p>BeerXML Generator Class</p>
+
+	</div>
 
 
 
@@ -101,9 +106,9 @@
 		
 		
 		<b>Namespace:</b> <a href="namespace-BeerXML.html">BeerXML</a><br />
-		
+		<b>Package:</b> BeerXML<br />
 
-		<b>Located at</b> <a href="source-class-BeerXML.Generator.html#7-75" title="Go to source code">BeerXML/Generator.php</a><br />
+		<b>Located at</b> <a href="source-class-BeerXML.Generator.html#6-87" title="Go to source code">BeerXML/Generator.php</a><br />
 	</div>
 
 
@@ -121,7 +126,7 @@
 
 		<td class="name"><div>
 		<a class="anchor" href="#___construct">#</a>
-		<code><a href="source-class-BeerXML.Generator.html#38-41" title="Go to source code">__construct</a>( )</code>
+		<code><a href="source-class-BeerXML.Generator.html#51-54" title="Go to source code">__construct</a>( )</code>
 
 		<div class="description short">
 			
@@ -150,7 +155,7 @@
 
 		<td class="name"><div>
 		<a class="anchor" href="#_addRecord">#</a>
-		<code><a href="source-class-BeerXML.Generator.html#44-50" title="Go to source code">addRecord</a>( <span>mixed <var>$record</var></span> )</code>
+		<code><a href="source-class-BeerXML.Generator.html#57-63" title="Go to source code">addRecord</a>( <span>mixed <var>$record</var></span> )</code>
 
 		<div class="description short">
 			
@@ -184,7 +189,7 @@
 
 		<td class="name"><div>
 		<a class="anchor" href="#_render">#</a>
-		<code><a href="source-class-BeerXML.Generator.html#52-74" title="Go to source code">render</a>( )</code>
+		<code><a href="source-class-BeerXML.Generator.html#65-86" title="Go to source code">render</a>( )</code>
 
 		<div class="description short">
 			
