--- a/namespace-BeerXML.html
+++ b/namespace-BeerXML.html
@@ -104,12 +104,12 @@
 <caption>Classes summary</caption>
 <tr>
 	<td class="name"><a href="class-BeerXML.Generator.html">Generator</a></td>
-	<td>
+	<td>BeerXML Generator Class
 <!-- by Texy2! --></td>
 </tr>
 <tr>
 	<td class="name"><a href="class-BeerXML.Parser.html">Parser</a></td>
-	<td></td>
+	<td>Parses BeerXML 1.0 files into PHP record classes</td>
 </tr>
 </table>
 
