--- a/source-class-BeerXML.Generator.Yeast.html
+++ b/source-class-BeerXML.Generator.Yeast.html
@@ -115,11 +115,11 @@
 </span></span><span id="18" class="l"><a class="l" href="#18">18: </a><span class="php-comment">     * @var array
 </span></span><span id="19" class="l"><a class="l" href="#19">19: </a><span class="php-comment">     */</span>
 </span><span id="20" class="l"><a class="l" href="#20">20: </a>    <span class="php-keyword1">protected</span> <span class="php-var"><a id="$simpleValues" href="#$simpleValues">$simpleValues</a></span> = <span class="php-keyword1">array</span>(
-</span><span id="21" class="l"><a class="l" href="#21">21: </a>        <span class="php-quote">'NAME'</span>    =&gt; <span class="php-quote">'setName'</span>,
-</span><span id="22" class="l"><a class="l" href="#22">22: </a>        <span class="php-quote">'VERSION'</span> =&gt; <span class="php-quote">'setVersion'</span>,
-</span><span id="23" class="l"><a class="l" href="#23">23: </a>        <span class="php-quote">'TYPE'</span>    =&gt; <span class="php-quote">'setType'</span>,
-</span><span id="24" class="l"><a class="l" href="#24">24: </a>        <span class="php-quote">'FORM'</span>    =&gt; <span class="php-quote">'setForm'</span>,
-</span><span id="25" class="l"><a class="l" href="#25">25: </a>        <span class="php-quote">'AMOUNT'</span>  =&gt; <span class="php-quote">'setAmount'</span>,
+</span><span id="21" class="l"><a class="l" href="#21">21: </a>        <span class="php-quote">'NAME'</span>    =&gt; <span class="php-quote">'getName'</span>,
+</span><span id="22" class="l"><a class="l" href="#22">22: </a>        <span class="php-quote">'VERSION'</span> =&gt; <span class="php-quote">'getVersion'</span>,
+</span><span id="23" class="l"><a class="l" href="#23">23: </a>        <span class="php-quote">'TYPE'</span>    =&gt; <span class="php-quote">'getType'</span>,
+</span><span id="24" class="l"><a class="l" href="#24">24: </a>        <span class="php-quote">'FORM'</span>    =&gt; <span class="php-quote">'getForm'</span>,
+</span><span id="25" class="l"><a class="l" href="#25">25: </a>        <span class="php-quote">'AMOUNT'</span>  =&gt; <span class="php-quote">'getAmount'</span>,
 </span><span id="26" class="l"><a class="l" href="#26">26: </a>    );
 </span><span id="27" class="l"><a class="l" href="#27">27: </a>
 </span><span id="28" class="l"><a class="l" href="#28">28: </a>    <span class="php-comment">/**
@@ -127,18 +127,18 @@
 </span></span><span id="30" class="l"><a class="l" href="#30">30: </a><span class="php-comment">     * @var array
 </span></span><span id="31" class="l"><a class="l" href="#31">31: </a><span class="php-comment">     */</span>
 </span><span id="32" class="l"><a class="l" href="#32">32: </a>    <span class="php-keyword1">protected</span> <span class="php-var"><a id="$optionalSimpleValues" href="#$optionalSimpleValues">$optionalSimpleValues</a></span> = <span class="php-keyword1">array</span>(
-</span><span id="33" class="l"><a class="l" href="#33">33: </a>        <span class="php-quote">'AMOUNT_IS_WEIGHT'</span> =&gt; <span class="php-quote">'setAmountIsWeight'</span>,
-</span><span id="34" class="l"><a class="l" href="#34">34: </a>        <span class="php-quote">'LABORATORY'</span>       =&gt; <span class="php-quote">'setLaboratory'</span>,
-</span><span id="35" class="l"><a class="l" href="#35">35: </a>        <span class="php-quote">'PRODUCT_ID'</span>       =&gt; <span class="php-quote">'setProductId'</span>,
-</span><span id="36" class="l"><a class="l" href="#36">36: </a>        <span class="php-quote">'MIN_TEMPERATURE'</span>  =&gt; <span class="php-quote">'setMinTemperature'</span>,
-</span><span id="37" class="l"><a class="l" href="#37">37: </a>        <span class="php-quote">'FLOCCULATION'</span>     =&gt; <span class="php-quote">'setFlocculation'</span>,
-</span><span id="38" class="l"><a class="l" href="#38">38: </a>        <span class="php-quote">'ATTENUATION'</span>      =&gt; <span class="php-quote">'setAttenuation'</span>,
-</span><span id="39" class="l"><a class="l" href="#39">39: </a>        <span class="php-quote">'NOTES'</span>            =&gt; <span class="php-quote">'setNotes'</span>,
-</span><span id="40" class="l"><a class="l" href="#40">40: </a>        <span class="php-quote">'BEST_FOR'</span>         =&gt; <span class="php-quote">'setBestFor'</span>,
-</span><span id="41" class="l"><a class="l" href="#41">41: </a>        <span class="php-quote">'TIMES_CULTURED'</span>   =&gt; <span class="php-quote">'setTimesCultured'</span>,
-</span><span id="42" class="l"><a class="l" href="#42">42: </a>        <span class="php-quote">'MAX_REUSE'</span>        =&gt; <span class="php-quote">'setMaxReuse'</span>,
-</span><span id="43" class="l"><a class="l" href="#43">43: </a>        <span class="php-quote">'MAX_TEMPERATURE'</span>  =&gt; <span class="php-quote">'setMaxTemperature'</span>,
-</span><span id="44" class="l"><a class="l" href="#44">44: </a>        <span class="php-quote">'ADD_TO_SECONDARY'</span> =&gt; <span class="php-quote">'setAddToSecondary'</span>,
+</span><span id="33" class="l"><a class="l" href="#33">33: </a>        <span class="php-quote">'AMOUNT_IS_WEIGHT'</span> =&gt; <span class="php-quote">'getAmountIsWeight'</span>,
+</span><span id="34" class="l"><a class="l" href="#34">34: </a>        <span class="php-quote">'LABORATORY'</span>       =&gt; <span class="php-quote">'getLaboratory'</span>,
+</span><span id="35" class="l"><a class="l" href="#35">35: </a>        <span class="php-quote">'PRODUCT_ID'</span>       =&gt; <span class="php-quote">'getProductId'</span>,
+</span><span id="36" class="l"><a class="l" href="#36">36: </a>        <span class="php-quote">'MIN_TEMPERATURE'</span>  =&gt; <span class="php-quote">'getMinTemperature'</span>,
+</span><span id="37" class="l"><a class="l" href="#37">37: </a>        <span class="php-quote">'FLOCCULATION'</span>     =&gt; <span class="php-quote">'getFlocculation'</span>,
+</span><span id="38" class="l"><a class="l" href="#38">38: </a>        <span class="php-quote">'ATTENUATION'</span>      =&gt; <span class="php-quote">'getAttenuation'</span>,
+</span><span id="39" class="l"><a class="l" href="#39">39: </a>        <span class="php-quote">'NOTES'</span>            =&gt; <span class="php-quote">'getNotes'</span>,
+</span><span id="40" class="l"><a class="l" href="#40">40: </a>        <span class="php-quote">'BEST_FOR'</span>         =&gt; <span class="php-quote">'getBestFor'</span>,
+</span><span id="41" class="l"><a class="l" href="#41">41: </a>        <span class="php-quote">'TIMES_CULTURED'</span>   =&gt; <span class="php-quote">'getTimesCultured'</span>,
+</span><span id="42" class="l"><a class="l" href="#42">42: </a>        <span class="php-quote">'MAX_REUSE'</span>        =&gt; <span class="php-quote">'getMaxReuse'</span>,
+</span><span id="43" class="l"><a class="l" href="#43">43: </a>        <span class="php-quote">'MAX_TEMPERATURE'</span>  =&gt; <span class="php-quote">'getMaxTemperature'</span>,
+</span><span id="44" class="l"><a class="l" href="#44">44: </a>        <span class="php-quote">'ADD_TO_SECONDARY'</span> =&gt; <span class="php-quote">'getAddToSecondary'</span>,
 </span><span id="45" class="l"><a class="l" href="#45">45: </a>    );
 </span><span id="46" class="l"><a class="l" href="#46">46: </a>
 </span><span id="47" class="l"><a class="l" href="#47">47: </a>    <span class="php-comment">/**
